<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">News_App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_get_net_pic_activity_2">获取网络图片</string>
    <string name="title_activity_login">用户登录</string>
    <string name="login">登录</string>
    <string name="loginacount">账号名：</string>
    <string name="loginpassword">密   码：</string>
    <string name="login_btn">登   录</string>
    <string name="find_password">找回密码</string>
    <string name="registerfree">免费注册</string>
    <string name="register_in_normal">普通用户注册</string>
    <string name="register_normal_useraccount">帐户名：</string>
    <string name="register_normal_useraccount_hint">请输入你的手机号</string>
    <string name="register_normal_password">密码：</string>
    <string name="register_normal_password_hint">请输入密码</string>
    <string name="register_normal_repassword">确认密码：</string>
    <string name="register_normal_repassword_hint">请输入确认密码</string>
    <string name="register_normal_name">真实姓名：</string>
    <string name="register_normal_name_hint">请输入真实姓名</string>
    <string name="register_normal_email_hint">请输入邮箱帐号</string>
    <string name="register_normal_email">邮箱：</string>
    <string name="no_null">用户名或密码不能为空</string>
    <string name="title_activity_anim">动画效果</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_classified_news">分类新闻</string>
    <string name="title_activity_news_bar">NewsBarActivity</string>
    <string name="title_activity_news_by_news_bar">根据新闻栏目获取新闻条目</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

</resources>