<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg" >

    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_user_icon_bg"
            android:src="@drawable/login_user_default_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/android_layout_bg"
            android:orientation="vertical" >

            <LinearLayout style="@style/PersonalMainLayoutStyle" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/more_activity_item_selector_bottom_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <TextView
                        android:id="@+id/tv_login_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginacount"
                        android:textColor="@android:color/black"
                        android:textSize="18.0sp" />

                    <EditText
                        android:id="@+id/login_name"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>

                <View style="@style/PersonalLine" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/more_activity_item_selector_bottom_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <TextView
                        android:id="@+id/tv_loginpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginpassword"
                        android:textColor="@android:color/black"
                        android:textSize="18.0sp" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:inputType="textPassword"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/android_title_bg"
                android:gravity="center"
                android:text="@string/login_btn"
                android:textColor="#fff"
                android:textSize="20sp"
                android:onClick="loginoperate"/>

            <RelativeLayout
                android:id="@+id/layout_login_userinfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
            </RelativeLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_register_bg"
                android:gravity="center"
                android:text="@string/registerfree"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>